[package]
name = "eiger-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1-rs = "*"
futures = "*"
openssl = "*"
protobuf = "3"
tokio = { version = "1", features = ["full"] }
tokio-openssl = "*"
x509-parser = "*"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
